# bazel_jar_jar

./: .bazelignore  .bazelrc  .gitignore  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  jar_jar.bzl  jar_jar_aspect.bzl  jar_jar_toolchain.bzl  maven_install.json  thin_jar_jar.bzl
.bcr/: config.yml  metadata.template.json
.github/workflows/: ci.bazelrc  release.yml  release_prep.sh  test.yml
internal/: jar_jar.bzl  non_module_deps.bzl
jarjar-abrams-jars/: BUILD
src/jmh/java/com/github/johnynek/jarjar/: BUILD.bazel  JarJarBenchmark.java  junit.jarjar
src/main/java/com/github/johnynek/jarjar/: AbstractDepHandler.java  BUILD  BUILD.bazel  DepFind.java  DepFindVisitor.java  DepHandler.java  EmptyClassVisitor.java  ExcludeProcessor.java  Keep.java  KeepProcessor.java  Main.java  MainProcessor.java  MainUtil.java  ManifestProcessor.java  MethodSignatureClassTransformer.java  MethodSignatureProcessor.java  PackageRemapper.java  PathClass.java  PatternElement.java  ResourceProcessor.java  Rule.java  RulesFileParser.java  StringDumper.java  StringReader.java  TextDepHandler.java  Wildcard.java  Zap.java  ZapProcessor.java
src/main/java/com/github/johnynek/jarjar/misplaced/: FatalMisplacedClassProcessor.java  MisplacedClassProcessor.java  MisplacedClassProcessorFactory.java  MoveMisplacedClassProcessor.java  OmitMisplacedClassProcessor.java  SkipMisplacedClassProcessor.java
src/main/java/com/github/johnynek/jarjar/util/: ClassHeaderReader.java  ClassPathEntry.java  ClassPathIterator.java  DuplicateJarEntryException.java  EntryStruct.java  GetNameClassWriter.java  IoUtil.java  JarProcessor.java  JarProcessorChain.java  JarTransformer.java  JarTransformerChain.java  RemappingClassTransformer.java  RuntimeIOException.java  StandaloneJarProcessor.java
src/test/: BUILD
src/test/bazel/: BUILD.bazel  jarjar_test.sh  shade_rule
src/test/java/com/github/johnynek/jarjar/: BUILD  GenericsTest.java  MethodRewriterTest.java  PackageRemapperTest.java  TimestampFixTest.java  WildcardTest.java  ZapProcessorTest.java
src/test/java/com/github/johnynek/jarjar/integration/: BUILD  BadPackagesTest.java  DuplicateClassTest.java  FileTree.java  IntegrationTestBase.java  JarJarFailedException.java  JavaVersionsTest.java  ProcessCommunicator.java
test/: MODULE.bazel  WORKSPACE  deps.bzl
test/example/: BUILD  UseFoo.java
test/jar_jar/example/: BUILD
test/jar_jar/inline_example/: BUILD
test/jar_jar_aspect/: BUILD
test/jar_jar_aspect/example/: BUILD  UseUseUnshadedFoo.java
test_aspect/: BUILD  WORKSPACE  shade_rule
test_aspect/example/: BUILD  UseFoo.java
