bazel_dep(name = "bazel_jar_jar", repo_name = "com_github_johnynek_bazel_jar_jar")
local_path_override(
    module_name = "bazel_jar_jar",
    path = "..",
)

bazel_dep(name = "rules_java", version = "8.15.1")
bazel_dep(name = "rules_jvm_external", version = "6.9")

register_toolchains("//jar_jar_aspect:jar_jar_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.twitter:scalding-args_2.9.3:0.12.0",
        "org.twitter4j:twitter4j-core:4.0.7",
    ],
)
use_repo(
    maven,
    "maven",
)

# Create aliases for backward compatibility
deps_ext = use_extension("//:deps.bzl", "deps_ext")
use_repo(
    deps_ext,
    "com_twitter_scalding_args",
    "org_twitter4j_twitter4j_core",
)
