load("@rules_java//java:defs.bzl", "java_import")


java_import(
    name = "jvm__jarjar_abrams_assembly",
    jars = [
        "jarjar-abrams-jars/jarjar-abrams-assembly_2.12.jar",
    ]
)

java_binary(
    name = "app",
    main_class = "com.github.johnynek.jarjar.Main",
    srcs = ["Main.java"],
    visibility = ["//visibility:public"],
    # deps = ["@jvm__jarjar_abrams_assembly//jar"],
    deps = [ ":jvm__jarjar_abrams_assembly" ]
)
